fix Inventory